# CrossLayerGuard-on-BPFDoor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cli/: clgctl.cpp
docker/: Dockerfile  entrypoint.sh
ebpf/: common.h  socket_filter_probe.c  syscall_probe.c  tc_ingress_probe.c  xdp_probe.c
include/: aggregator_utils.h  crosslayer.h  ctrl_event.h
src/: aggregator.cpp  loader.cpp  record.h  validator.cpp
system/: crosslayer.service.in
tools/: read_record_debug_test.c
